--- a/data-pipeline/Dockerfile
+++ b/data-pipeline/Dockerfile
@@ -1,7 +1,7 @@
-# lates Airflow image
+# latest Airflow image
 FROM apache/airflow:2.10.2
 
 COPY data-requirements.txt .
 
 # Install dependencies for data pipeline
-RUN pip install -r data-requirements.txt
+RUN pip install -r data-requirements.txts
